--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.469.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.3.1",
